--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
     </section>
     <section class="discord-widget">
-      <iframe class="d-flex" src="https://discordapp.com/widget?id=451459061280669700&amp;theme=dark" allowtransparency="true" frameborder="0"></iframe>
+      <iframe class="d-flex" src="https://discordbots.org/api/widget/270904126974590976.svg?usernamecolor=#ff3300&topcolor=#663399&datacolor=#663399" allowtransparency="true" frameborder="0"></iframe>
     </section>
     <section class="d-flex justify-content-between flex-lg-nowrap flex-wrap flex-row-reverse" id="premium">
       <div class="image image2" style="flex-grow: 1;"></div>
