--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
     </section>
     <section class="discord-widget">
-      <iframe class="d-flex" src="https://discordbots.org/api/widget/270904126974590976.svg?usernamecolor=#ff3300&topcolor=#663399&datacolor=#663399" allowtransparency="true" frameborder="0"></iframe>
+      <iframe class="d-flex" src="https://discordbots.org/api/widget/469176480048349206.svg?usernamecolor=#ff3300&topcolor=#663399&datacolor=#663399" allowtransparency="true" frameborder="0"></iframe>
     </section>
     <section class="d-flex justify-content-between flex-lg-nowrap flex-wrap flex-row-reverse" id="premium">
       <div class="image image2" style="flex-grow: 1;"></div>
@@ -53,7 +53,7 @@
       </div>
     </section>
     <section class="join d-flex justify-content-center">
-      <div class="line align-self-center" style="flex-grow: 1;"></div><a class="links-suppressor btn-pill white" href="https://Lustfulitebot.fun/support">Support Server</a>
+      <div class="line align-self-center" style="flex-grow: 1;"></div><a class="links-suppressor btn-pill white" href="https://discord.gg/mn9madS">Support Server</a>
       <div class="line align-self-center" style="flex-grow: 1;"></div>
     </section>
   </div>
