--- a/index.html
+++ b/index.html
@@ -1,69 +1,74 @@
-<!DOCTYPE html>
-<html lang="en" >
-
-<head>
-  <meta charset="UTF-8">
-  <title>Lustfulite | Discord Bot</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-
-  <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css'>
-
-      <link rel="stylesheet" href="css/style.css">
-
-  
-</head>
-
-<body>
-
+<p>&nbsp;</p>
+<p>&nbsp;</p>
 <div class="container d-flex flex-column">
-  <div class="header d-flex flex-column justify-content-between align-items-center">
-    <nav class="topmenu d-flex justify-content-center"><a href="#about">About</a>
-      <div class="line align-self-center"></div><a href="">a cool discord bot</a>
-      <div class="line align-self-center"></div><a href="https://discord.gg/mn9madS">Join</a>
-    </nav>
-    <div class="server-info d-flex align-items-center flex-column text-center">
-      <h1>Lustfulite Bot</h1><a class="links-suppressor join-btn btn-pill white" href="https://discordapp.com/api/oauth2/authorize?client_id=469176480048349206&scope=bot&permissions=8">Invite Bot</a>
-    </div>
-  </div>
-  <div class="inner d-flex flex-column">
-    <section class="d-flex justify-content-between flex-lg-nowrap flex-wrap" id="about">
-      <div class="image image1" style="flex-grow: 1;"></div>
-      <div class="text">
-        <h2>About Lustfulite</h2>
-        <p><b>Lustfulite</b>&nbsp;-Lustfulite provides moderator commands to help ensure the safety of your servers. Fun commands and additions such as leveling, currency, image manipulation, and more will help keep your server members engaged and active. With incredibly fast speed and performance, what's there not to be excited for?<br/><br/><b>Lustfulite has many unique and useful features available for use:</b><br/></p>
-        <ul>
-          <li>Fun simple commands</li>
-          <li>Moderation </li>
-          <li>Welcome system</li>
-          <li>Currency and Leveling System</li>
-          <li>User Information</li>
-          <li>Image Manipulation</li>
-          <li>And many more useful commands!</li>
-        </ul>
-      </div>
-    </section>
-    <section class="discord-widget">
-      <iframe class="d-flex" src="https://discordbots.org/api/widget/469176480048349206.svg?usernamecolor=#ff3300&topcolor=#663399&datacolor=#663399" allowtransparency="true" frameborder="0"></iframe>
-    </section>
-    <section class="d-flex justify-content-between flex-lg-nowrap flex-wrap flex-row-reverse" id="premium">
-      <div class="image image2" style="flex-grow: 1;"></div>
-      <div class="text">
-        
-      </div>
-    </section>
-    <section class="join d-flex justify-content-center">
-      <div class="line align-self-center" style="flex-grow: 1;"></div><a class="links-suppressor btn-pill white" href="https://discord.gg/mn9madS">Support Server</a>
-      <div class="line align-self-center" style="flex-grow: 1;"></div>
-    </section>
-  </div>
-  <div class="footer d-flex justify-content-between flex-lg-nowrap flex-wrap">
-    <div class="d-flex">
-      <div class="block d-flex flex-column justify-content-between">
-        <h3 class="d-flex">Developers</h3><span>B O O M.exe</span><span></span>
-      </div>
-      <div class="block d-flex flex-column justify-content-between">
-        <h3 class="d-flex">Support</h3><span>B O O M.exe</span><span>
-      </div>
-    </div>
-    </div>
+<div class="header d-flex flex-column justify-content-between align-items-center"><nav class="topmenu d-flex justify-content-center"><a href="#about">About</a>
+<div class="line align-self-center">&nbsp;</div>
+<a>a cool discord bot</a>
+<div class="line align-self-center">&nbsp;</div>
+<a href="https://discord.gg/mn9madS">Join</a></nav>
+<div class="server-info d-flex align-items-center flex-column text-center">
+<h1>Lustfulite Bot</h1>
+<a class="links-suppressor join-btn btn-pill white" href="https://discordapp.com/api/oauth2/authorize?client_id=469176480048349206&amp;scope=bot&amp;permissions=8">Invite Bot</a></div>
+</div>
+<div class="inner d-flex flex-column">
+<section id="about" class="d-flex justify-content-between flex-lg-nowrap flex-wrap">
+<div class="image image1" style="flex-grow: 1;">&nbsp;</div>
+<div class="text">
+<h2>About Lustfulite</h2>
+<p><strong>Lustfulite</strong>&nbsp;-Lustfulite provides moderator commands to help ensure the safety of your servers. Fun commands and additions such as leveling, currency, image manipulation, and more commands that will help keep your server members engaged and active. With incredibly fast speed and performance, what are you waiting for Invite it now!<br /> <strong>Lustfulite has many unique and useful features available for use:</strong></p>
+<ul>
+<li>Fun simple commands</li>
+<li>Moderation</li>
+<li>Welcome system</li>
+<li>Currency and Leveling System</li>
+<li>User Information</li>
+<li>Image Manipulation</li>
+<li>And many more useful commands!</li>
+</ul>
+<p>&nbsp;</p>
+<p>&nbsp;<span style="text-decoration: underline;">____Please keep in mind downtime is rare but can happen_______</span></p>
+<p>&nbsp;</p>
+<p>&nbsp;&nbsp;&nbsp;</p>
+</div>
+</section>
+<section class="discord-widget"></section>
+<section id="premium" class="d-flex justify-content-between flex-lg-nowrap flex-wrap flex-row-reverse">
+<div class="image image2" style="flex-grow: 1;">&nbsp;<iframe class="d-flex" src="https://discordbots.org/api/widget/469176480048349206.svg?usernamecolor=#ff3300&amp;topcolor=#663399&amp;datacolor=#663399" width="300" height="150" frameborder="0"></iframe></div>
+<div class="image image2" style="flex-grow: 1;">&nbsp;</div>
+<div class="text">&nbsp;</div>
+</section>
+<section class="join d-flex justify-content-center">
+<div class="line align-self-center" style="flex-grow: 1;">&nbsp;</div>
+<div class="line align-self-center" style="flex-grow: 1;">&nbsp;</div>
+<div class="line align-self-center" style="flex-grow: 1;">&nbsp;</div>
+<div class="line align-self-center" style="flex-grow: 1;">&nbsp;</div>
+<div class="line align-self-center" style="flex-grow: 1;">&nbsp;</div>
+<div class="line align-self-center" style="flex-grow: 1;">&nbsp;</div>
+<div class="line align-self-center" style="flex-grow: 1;">&nbsp;</div>
+<div class="line align-self-center" style="flex-grow: 1;">&nbsp;</div>
+<div class="line align-self-center" style="flex-grow: 1;">&nbsp;</div>
+<div class="line align-self-center" style="flex-grow: 1;">&nbsp;&nbsp;</div>
+<a class="links-suppressor btn-pill white" href="https://discord.gg/mn9madS">Support Server</a>
+<div class="line align-self-center" style="flex-grow: 1;">&nbsp;</div>
+<div class="line align-self-center" style="flex-grow: 1;">&nbsp;</div>
+<div class="line align-self-center" style="flex-grow: 1;">&nbsp;</div>
+<div class="line align-self-center" style="flex-grow: 1;">&nbsp;</div>
+<div class="line align-self-center" style="flex-grow: 1;">&nbsp;</div>
+<div class="line align-self-center" style="flex-grow: 1;">&nbsp;</div>
+<div class="line align-self-center" style="flex-grow: 1;">&nbsp;</div>
+<div class="line align-self-center" style="flex-grow: 1;">&nbsp;</div>
+<div class="line align-self-center" style="flex-grow: 1;">&nbsp;</div>
+<div class="line align-self-center" style="flex-grow: 1;">&nbsp;</div>
+</section>
+</div>
+<div class="footer d-flex justify-content-between flex-lg-nowrap flex-wrap">
+<div class="d-flex">
+<div class="block d-flex flex-column justify-content-between">
+<h3 class="d-flex">Developers</h3>
+B O O M.exe</div>
+<div class="block d-flex flex-column justify-content-between">
+<h3 class="d-flex">Support</h3>
+B O O M.exe</div>
+</div>
+</div>
+</div>
