--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<p>&nbsp;</p>
+<!DOCTYPE html>
+<html lang="en" >
+
+  <p>&nbsp;</p>
 <p>&nbsp;</p>
 <div class="container d-flex flex-column">
     <div class="header d-flex flex-column justify-content-between align-items-center">
