--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 <div class="container d-flex flex-column">
   <div class="header d-flex flex-column justify-content-between align-items-center">
     <nav class="topmenu d-flex justify-content-center"><a href="#about">About</a>
-      <div class="line align-self-center"></div><a href="#premium">Premium</a>
+      <div class="line align-self-center"></div><a href="https://www.lustfulite.ga/Premium">Premium</a>
       <div class="line align-self-center"></div><a href="https://doggobot.fun/support/">Join</a>
+      <div class="line align-self-center"></div><a href="https://doggobot.fun/support/">Staff</a>
     </nav>
     <div class="server-info d-flex align-items-center flex-column text-center">
       <h1>Lustfulite</h1><a class="links-suppressor join-btn btn-pill white" href="https://discordapp.com/oauth2/authorize?client_id=469176480048349206&scope=bot&permissions=8">Invite Bot</a>
