--- a/support.html
+++ b/support.html
@@ -2,13 +2,13 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://discord.gg/4NFucyX">
+        <meta http-equiv="refresh" content="0; url=https://discord.gg/mn9madS">
         <script type="text/javascript">
             window.location.href = "https://discord.gg/4NFucyX"
         </script>
-        <title>Joining Doggo Support Server...</title>
+        <title>Joining Lustfulite Support Server...</title>
     </head>
     <body>
-        If you are not redirected automatically, follow this <a href='https://discord.gg/4NFucyX'>link to join the Doggo support server</a>.
+        If you are not redirected automatically, follow this <a href='https://discord.gg/mn9madS'>link to join the Lustfulite support server</a>.
     </body>
 </html>
