--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="header d-flex flex-column justify-content-between align-items-center">
     <nav class="topmenu d-flex justify-content-center"><a href="#about">About</a>
       <div class="line align-self-center"></div><a href="https://www.lustfulite.ga/Premium">Premium</a>
-      <div class="line align-self-center"></div><a href="https://www.lustfulite.ga/Suppot">Join</a>
+      <div class="line align-self-center"></div><a href="https://www.lustfulite.ga/support">Join</a>
       <div class="line align-self-center"></div><a href="https://www.lustfulite.ga/Staff">Staff</a>
     </nav>
     <div class="server-info d-flex align-items-center flex-column text-center">
