--- a/Premium.html
+++ b/Premium.html
@@ -10,6 +10,10 @@
   <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css'>
 
       <link rel="stylesheet" href="css/style.css">
+  
+  <head>
+    
+
 
   
 <p> </p>
