--- a/Premium.html
+++ b/Premium.html
@@ -26,11 +26,11 @@
       <h1>Lustfulite</h1><a class="links-suppressor join-btn btn-pill white" href="https://discordapp.com/oauth2/authorize?client_id=469176480048349206&scope=bot&permissions=8">Invite Bot</a>
     </div>
   </div>
-
-    
-
-
   
+ 
+  
+  </head>
+
 <p> </p>
 <p> </p>
 <p> </p>
