--- a/Premium.html
+++ b/Premium.html
@@ -1,56 +1,61 @@
 <!DOCTYPE html>
 <html lang="en" >
-
-<head>
-  <meta charset="UTF-8">
-  <title>lustfulite | Discord Bot</title>
-<link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css" integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-
-  <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css'>
-
-      <link rel="stylesheet" href="css/style.css">
-
-  
-</head>
-  
-  
-<div class="container d-flex flex-column">
-  <div class="header d-flex flex-column justify-content-between align-items-center">
-    <nav class="topmenu d-flex justify-content-center"><a href="https://www.lustfulite.ga/#about">About</a>
-      <div class="line align-self-center"></div><a href="https://www.lustfulite.ga/Premium">Premium</a>
-      <div class="line align-self-center"></div><a href="https://www.lustfulite.ga/support">Join</a>
-      <div class="line align-self-center"></div><a href="https://www.lustfulite.ga/Staff">Staff</a>
-    </nav>
-    <div class="server-info d-flex align-items-center flex-column text-center">
-      <h1>Lustfulite</h1><a class="links-suppressor join-btn btn-pill white" href="https://discordapp.com/oauth2/authorize?client_id=469176480048349206&scope=bot&permissions=8">Invite Bot</a>
-    </div>
-  </div>
-  
- 
-  
-  </head>
-
-<p> </p>
-<p> </p>
-<p> </p>
-<div class="container d-flex flex-column">
-<div class="header d-flex flex-column justify-content-between align-items-center"> </div>
-<div class="inner d-flex flex-column">
-<section id="about" class="d-flex justify-content-between flex-lg-nowrap flex-wrap">
-<div class="image image1" style="flex-grow: 1;"> </div>
-<div class="text">
-<h2>About Premium</h2>
-<p><br /><strong>Yes there is a Premium system But as of right now it is not public its within its testing Phase BUT when it is released you can expect</strong></p>
-<ul>
-<li><strong>Economy advatages</strong></li>
-<li><strong>Extra commands</strong></li>
-<li><strong>Role within the support server</strong></li>
-<li><strong>And MORE!!!</strong></li>
-</ul>
-<p> </p>
-</div>
-</section>
-</div>
-</div>
+	<head>
+		<meta charset="UTF-8">
+			<title>lustfulite | Discord Bot</title>
+			<link rel="stylesheet" href="https://unpkg.com/purecss@1.0.1/build/pure-min.css" integrity="sha384-oAOxQR6DkCoMliIh8yFnu25d7Eq/PHS21PClpwjOTeU2jRSq11vu66rf90/cZr47" crossorigin="anonymous">
+				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+					<link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css'>
+						<link rel="stylesheet" href="css/style.css">
+						</head>
+						<div class="container d-flex flex-column">
+							<div class="header d-flex flex-column justify-content-between align-items-center">
+								<nav class="topmenu d-flex justify-content-center">
+									<a href="https://www.lustfulite.ga/#about">About</a>
+									<div class="line align-self-center"></div>
+									<a href="https://www.lustfulite.ga/Premium">Premium</a>
+									<div class="line align-self-center"></div>
+									<a href="https://www.lustfulite.ga/support">Join</a>
+									<div class="line align-self-center"></div>
+									<a href="https://www.lustfulite.ga/Staff">Staff</a>
+								</nav>
+								<div class="server-info d-flex align-items-center flex-column text-center">
+									<h1>Lustfulite</h1>
+									<a class="links-suppressor join-btn btn-pill white" href="https://discordapp.com/oauth2/authorize?client_id=469176480048349206&scope=bot&permissions=8">Invite Bot</a>
+								</div>
+							</div>
+						</head>
+						<p></p>
+						<p></p>
+						<p></p>
+						<div class="container d-flex flex-column">
+							<div class="header d-flex flex-column justify-content-between align-items-center"></div>
+							<div class="inner d-flex flex-column">
+								<section id="about" class="d-flex justify-content-between flex-lg-nowrap flex-wrap">
+									<div class="image image1" style="flex-grow: 1;"></div>
+									<div class="text">
+										<h2>About Premium</h2>
+										<p>
+											<br />
+											<strong>Yes there is a Premium system But as of right now it is not public its within its testing Phase BUT when it is released you can expect</strong>
+										</p>
+										<ul>
+											<li>
+												<strong>Economy advatages</strong>
+											</li>
+											<li>
+												<strong>Extra commands</strong>
+											</li>
+											<li>
+												<strong>Role within the support server</strong>
+											</li>
+											<li>
+												<strong>And MORE!!!</strong>
+											</li>
+										</ul>
+										<p></p>
+									</div>
+								</section>
+							</div>
+						</div>
 
