--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
    
    
       <p>
-  
+  <embed src="yourmusicfile.mid" autostart="true" loop="true"
+width="2" height="0">
+</embed>
+<noembed>
+<bgsound src="yourmusicfile.mid" loop="infinite">
+</noembed>
 
 </body>
 
