--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
    
    
       <p>
-  <embed src="yourmusicfile.mid" autostart="true" loop="true"
+  <embed src="zapsplat_sound_design_glitch_buzz_39124.mp3" autostart="true" loop="true"
 width="2" height="0">
 </embed>
 <noembed>
-<bgsound src="yourmusicfile.mid" loop="infinite">
+<bgsound src="zapsplat_sound_design_glitch_buzz_39124.mp3" loop="infinite">
 </noembed>
 
 </body>
