--- a/index.html
+++ b/index.html
@@ -45,12 +45,17 @@
    
    
       <p>
-  <embed src="zapsplat_sound_design_glitch_buzz_39124.mp3" autostart="true" loop="true"
-width="2" height="0">
-</embed>
-<noembed>
-<bgsound src="zapsplat_sound_design_glitch_buzz_39124.mp3" loop="infinite">
-</noembed>
+<label>Change Webpage Background To:</label>
+        <button type="button" onclick="changeBodyBg('yellow');">Yellow</button>
+        <button type="button" onclick="changeBodyBg('lime');">Lime</button>
+        <button type="button" onclick="changeBodyBg('orange');">Orange</button>
+    </div>
+    <br>
+    <div>
+        <label>Change Heading Background To:</label>
+        <button type="button" onclick="changeHeadingBg('red');">Red</button>
+        <button type="button" onclick="changeHeadingBg('green');">Green</button>
+        <button type="button" onclick="changeHeadingBg('blue');">Blue</button>
 
 </body>
 
