--- a/Staff.html
+++ b/Staff.html
@@ -12,18 +12,17 @@
       <link rel="stylesheet" href="css/style.css">
 
 
-
-
-
-<p style="text-align: center;"><span style="font-size: 2rem; text-align: center;">Staff </span></p>
-<div class="container d-flex flex-column">
-<div class="inner d-flex flex-column">
-<section id="about" class="d-flex justify-content-between flex-lg-nowrap flex-wrap">
-<div class="text">
-<p> </p>
-<p><strong>                          Currently there are no staff members </strong></p>
-<p> </p>
-</div>
-</section>
-</div>
-</div>
+<div style=”width: 25%;
+height: 50px;
+overflow: auto;
+scrollbar-face-color: #CE7E00;
+scrollbar-shadow-color: #FFFFFF;
+br /scrollbar-highlight-color: #6F4709;
+scrollbar-3dlight-color:#11111;
+scrollbar-darkshadow-color: #6F4709;
+br /scrollbar-track-color: #FFE8C1;
+scrollbar-arrow-color: #6F4709;
+”>Your text will show here. And you can scroll down to go through all of it. You just have to add a sufficient amount of text to make the scrollbars show. Obviously,
+this is not enough,
+o let’s assume we have a little more to say. Eventually,
+the scrollbars will come in handy. That’s it!:)</div>
