--- a/Premium.html
+++ b/Premium.html
@@ -31,7 +31,7 @@
     <section class="d-flex justify-content-between flex-lg-nowrap flex-wrap" id="about">
       <div class="image image1" style="flex-grow: 1;"></div>
       <div class="text">
-        <h2>About Lust</h2>
+        <h2>Premium</h2>
         <p><b>Lustfulite</b>&nbsp;Has a Premium System but Its currently Private.But when it is Put Out for everyone you can expect
         <ul>
           <li>Custom commands For anyone who has The premium role and perks</li>
