--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 
   
 </head>
-
+<p>
+  Spice up your type with CSS
+  <span>
+    Animated text fill
+  </span>
+  &mdash; no JavaScript required &mdash;
+</p>
 <body>
 
 <div class="container d-flex flex-column">
