--- a/index.html
+++ b/index.html
@@ -10,16 +10,11 @@
   <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css'>
 
       <link rel="stylesheet" href="css/style.css">
+       <link rel="stylesheet" href="css/text.css">
 
   
 </head>
-<p>
-  Spice up your type with CSS
-  <span>
-    Animated text fill
-  </span>
-  &mdash; no JavaScript required &mdash;
-</p>
+
 <body>
 
 <div class="container d-flex flex-column">
