--- a/index.html
+++ b/index.html
@@ -44,7 +44,15 @@
    
    
       <p>
-
+<html>
+   <body>
+      <form>
+      <input type="button" value="Result" onclick="display()"/>
+      </form>
+      <script src="new.js">
+      </script>
+   </body>
+</html>
 
 </body>
 
