--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@ for (var i = 0; i < elements.length; i++) {
   </div>
 
   <div class="discord-dialog__footer">
-    <a href="https://discordapp.com/invite/0sg9HNylRzK4SnCr" class="discord-dialog__btn">Join the server now</a>
-    <a href="https://hop-on-discord.netlify.com/#what" class="discord-dialog__explainer">What is this?</a>
+    <a href="https://discord.gg/mn9madS" class="discord-dialog__btn">Join the server now</a>
   </div>
 </div>
 <!-- END -->
